infra/keycloak/keycloak-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hosts:
    - keycloak.cluster.wooju.org
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak
            port:
              number: 8080
